<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">iPant</string>
    <string name="default_notification_channel_id">iPANT_kanal</string>
    <string name="skip_icon">&#xe919;</string>
    <string name="txt_login">logga in</string>
    <string name="txt_submit">registrera</string>
    <string name="txtEmail">Epost adress</string>
    <string name="txt_password">lösenord</string>
    <string name="txt_login_to_your_account">logga in på ditt konto</string>
    <string name="txt_forgot_password">glömt lösenord?</string>
    <string name="txt_sign_up">bli medlem</string>
    <string name="txt_sign_up_now">bli medlem nu</string>
    <string name="txt_signup_select_msg">välj land och ange mobilnummer</string>
    <string name="txt_signup_otp_msg">iPANT skickar en engångskod som sms för att verifiera ditt nummer. Eventuella operatörskostnader kan tillkomma.</string>
    <string name="txtMobileNumber">mobil nummer</string>
    <string name="txtMobileNumberExcludeCountryCode">mobil nummer (exklusive landskod)</string>
    <string name="txt_signup_msg"><![CDATA[acceptera vilkoren genom att klicka på fortsätt]]></string>
    <string name="txt_accept_and_continue"><![CDATA[acceptera och fortsätt]]></string>
    <string name="txt_verification_msg">ange engångskoden du har tagit emot via SMS</string>
    <string name="txtOneTimePassword">ange engångskoden</string>
    <string name="txt_resend_verification_code">skicka igen</string>
    <string name="txt_enter_verification_code">ange verifieringskoden</string>
    <string name="txt_verify">verifiera</string>
    <string name="txtFirstName">förnamn</string>
    <string name="txtLastName">efternamn</string>
    <string name="txtConfirmPassword">ange lösenordet igen</string>
    <string name="txtNationalIdNumber">Enter National Id Number</string>
    <string-array name="Country">
        <item>Select Country</item>
        <item>India</item>
        <item>United States of America</item>
        <item>United Kingdom</item>
        <item>Kenya</item>
        <item>UAE</item>
    </string-array>
    <string-array name="sp_array">
        <item>Select Service Provider</item>
        <item>Airtel</item>
        <item>Idea</item>
        <item>Jio</item>
        <item>Videocon</item>
        <item>Vodafone</item>
    </string-array>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">inställningar</string>
    <string name="txt_my_account">mitt konto</string>
    <string name="txt_my_wallet">plånbok</string>
    <string name="txt_settings">inställningar</string>
    <string name="txt_about_app">om iPANT</string>
    <string name="txt_contact_us">kontakta oss</string>
    <string name="txt_privacy_policy">integritetspolicy</string>
    <string name="txt_terms_and_conditions"><![CDATA[allmänna vilkor]]></string>
    <string name="txt_invite_friends">bjud in en vän</string>
    <string name="txt_logout">logga ut</string>
    <string name="txt_logout_msg">är du säker på att du vill logga ut?</string>
    <string name="txt_forgot_password_msg">ange din epost adress för att byta ditt lösenord</string>
    <string name="txtCurrencySign">kr</string>
    <string name="txt_add">lägg till</string>
    <string name="txt_send">skicka</string>
    <string name="txt_withdrawn">uttag</string>
    <string name="txt_jackpot_msg">Largest jackpots in the world, from anywhere in the world!</string>
    <string name="txt_notification">notifering</string>
    <string name="txt_myCards">mina kort</string>
    <string name="txt_changePassword">byt lösenord</string>
    <string name="txt_home">hem</string>
    <string name="no_record_found">inga aktiviteter hittades.</string>
    <string name="text_all">alla</string>
    <string name="text_added">tillagd</string>
    <string name="text_sent">skickat</string>
    <string name="txt_delete_this_card">radera detta kort</string>
    <string name="error_email_empty">ange Epost adress.</string>
    <string name="error_email_not_valid">ange giltig Epost adress.</string>
    <string name="error_password_empty">Ange lösenord.</string>
    <string name="error_password_length">lösenordet måste innehålla minst 6 tecken</string>
    <string name="error_mobile_number_empty">Ange mobilnummer.</string>
    <string name="error_mobile_number_length">mobilnummer måste innehålla minst 8 sifror.</string>
    <string name="txt_select_country">välj land</string>
    <string name="error_country_code_empty">välj land.</string>
    <string name="error_agree_to_terms_and_conditions">acceptera allmänna vilkor för att fortsätta.</string>
    <string name="error_otp_empty">ange engångskod.</string>
    <string name="error_otp_length">ange giltig engångskod.</string>
    <string name="error_first_name_empty">ange förnamn.</string>
    <string name="error_last_name_empty">ange efternamn.</string>
    <string name="error_confirm_password_empty">upprepa lösenord.</string>
    <string name="error_confirm_password_length">upprepningen av lösenordet måste innehålla minst 6 tecken.</string>
    <string name="error_password_not_matched">lösenordet stämmer inte med upprepningen, vänligen kontrolera.</string>
    <string name="error_select_id_type">välj ID handling.</string>
    <string name="error_national_id_empty">ange personnummer.</string>
    <string name="txt_ok">ok</string>
    <string name="txt_yes">ja</string>
    <string name="txt_no">nej</string>
    <string name="txt_back_exit_msg">är du säker på att du vill lämna</string>
    <string name="txt_confirm">bekräfta</string>
    <string name="txt_cancel">annullera</string>
    <string name="txt_alert">varna</string>
    <string name="txt_next">nästa</string>
    <string name="txt_get_started">påbörja</string>
    <string name="txt_forgot_password_number_msg">ange mobilnummer för att byta lösenord.</string>
    <string name="error_invalid_mobile_number">ange ett gilltigt mobilnummer.</string>
    <string name="txt_reset_pasword_msg">välj lösenord.</string>
    <string name="txt_new_password">nytt lösenord</string>
    <string name="txtConfirmNewPassword">bekräfta nytt lösenord</string>
    <string name="txt_reset_password">byt lösenord</string>
    <string name="txt_current_password">nuvarande lösenord</string>
    <string name="error_current_password_empty">ange ditt nuvarande lösenord.</string>
    <string name="error_current_password_length">nuvarande lösenord måste innehålla minst 6 tecken.</string>
    <string name="txt_enter_amount">ange belopp</string>
    <string name="txt_add_money">lägg till pengar</string>
    <string name="error_enter_amount">ange belopp.</string>
    <string name="txt_add_money_to_wallet">överför pengar till plånboken.</string>
    <string name="txt_use_my_wallet">använd min plånbok.</string>
    <string name="txt_enter_card_number">ange ditt kortnummer.</string>
    <string name="txt_card_expiry_date">gilltighets datum</string>
    <string name="txt_card_cvv">CVV</string>
    <string name="txt_save_card_for_future_msg">spara detta kort för framtida betalningar</string>
    <string name="txt_proceed_securely">fortsätt säkert</string>
    <string name="txt_other_payment_option">annan betalningsmetod</string>
    <string name="txt_debit_card">debit kort</string>
    <string name="txt_credit_card">kredit kort</string>
    <string name="error_enter_card_msg">ange kortnummer.</string>
    <string name="error_invalid_card_number">ange ett gilltigt kortnummer.</string>
    <string name="error_select_card_expiry_month_year">välj utgångsdatum.</string>
    <string name="error_enter_cvv">ange 3 siffriga koden.</string>
    <string name="error_invalid_cvv">ange gilltig 3 siffrig kod.</string>
    <string name="txt_send_money">skicka pengar</string>
    <string name="txt_saved_cards">sparade kort</string>
    <string name="error_please_select_card">välj ditt kort bland tillgängliga kort.</string>
    <string name="txt_no_saved_card">inga sparade kort hittades.</string>
    <string name="txtEnterMobileNumber">ange mobilnummer (exklusive landskod).</string>
    <string name="txt_enter_comment">kommentar</string>
    <string name="txt_available_balance">tillgänglig summa</string>
    <string name="txt_receiver_details">motagarens detaljer</string>
    <string name="txt_confirmation_required">bekräftelse krävs</string>
    <string name="txt_money_transfer_msg">är du säker på att du vill överföra pengar till</string>
    <string name="txt_update_app">vi har slutat ge support till denna version. uppdatera din app för att fortsätta.</string>
    <string name="txt_session_expire">inloggning uphörts, logga in på nytt.</string>
    <string name="txt_edit">redigera</string>
    <string name="txt_save">spara</string>
    <string name="txtAccountHolderName">kontoinnehavarens namn</string>
    <string name="txt_account_number">kontonummer</string>
    <string name="txtSortCode">Clearing nummer</string>
    <string name="txt_withdrawn_money">ta ut pengar</string>
    <string name="error_select_bank">välj en bank från menyn.</string>
    <string name="error_enter_account_holder_name">ange kontoinnehavrens namn.</string>
    <string name="error_enter_account_number">ange kontonummret.</string>
    <string name="error_enter_sort_code">Please enter sort code.</string>
    <string name="txt_account_details">konto detaljer</string>
    <string name="txt_transaction_date">överföringsdatum</string>
    <string name="txt_transaction_id">överförings ID</string>
    <string name="txt_amount_added">tilllagt belopp</string>
    <string name="txt_amount_sent">skickade belopp</string>
    <string name="txt_done">klar</string>
    <string name="txt_order_id">beställnings ID :</string>
    <string name="error_no_contact_permission">denna app kräver åtkomst till kontaktlistan, vänligen aktivera åtkomst I inställningar.</string>
    <string name="txt_request_successful">begäran lyckades</string>
    <string name="error_no_internet_connection">ingen internet anslutning.</string>
    <string name="error_invalid_amount">beloppet kan inte.</string>
    <string name="txt_mobile_recharge">mobil uppladdning</string>
    <string name="txt_proceed_to_recharge">fortsätt till uppladdning</string>
    <string name="txt_sign_up_with_bank_id">registrera med Bank ID</string>
    <string name="txt_scan">skanna</string>
    <string name="txtFamilyName">efternamn</string>
    <string name="txtAddress">adress</string>
    <string name="error_no_change_found">inga ändringar har skett I profilen.</string>
    <string name="txt_my_profile">min profil</string>
    <string name="txt_faq">Frågor och svar</string>
    <string name="txt_received">mottagen</string>
    <string name="error_invalid_account_number">ange ett gilltigt kontonummer.</string>
    <string name="error_enter_valid_sort_code">Please enter valid sort code.</string>
    <string name="txt_enter_personal_number">Ange 12 siffriga personnummer</string>
    <string name="txt_personal_number">personnummer</string>
    <string name="error_enter_personal_id_number">Vänligen ange personnummer.</string>
    <string name="error_personal_id_number_length">personnummer ska ha minst 12 tecken.</string>
    <string name="error_app_not_installed">Bank-ID-applikation inte installerad på den här enheten, var god installera och konfigurera ditt bank-id i programmet för att fortsätta vidare.</string>
    <string name="landingMainHeading">Få dina pantpengar att växa</string>
    <string name="landingDesc">Sveriges digitala pant/återvinning plattform \n
Få dina pantpengar när du pantar och
belöningar när du återvinner</string>
</resources>