<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:fitsSystemWindows="true"
        tools:context=".activities.landing_page.LandingActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3.2"
                android:gravity="center">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="@dimen/logo_size"
                    android:layout_marginRight="@dimen/logo_size"
                    android:src="@drawable/blue_logo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.8"
                android:gravity="top|center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:fontFamily="@font/extrabold"
                    android:gravity="center"
                    android:paddingBottom="@dimen/activity_horizontal_margin"
                    android:text="@string/landingMainHeading"
                    android:textColor="@color/primary_theme_color_one" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:fontFamily="@font/semibold"
                    android:gravity="center"
                    android:text="@string/landingDesc"
                    android:textColor="@color/light_grey"
                    android:textSize="@dimen/edtTxtSize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:gravity="top|center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/llFields"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/btn_margin"
                    android:layout_marginTop="@dimen/edt_margin_between"
                    android:layout_marginRight="@dimen/btn_margin"
                    android:background="@drawable/ripple_effect_colored_btn"
                    android:fontFamily="@font/extrabold"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:longClickable="false"
                    android:onClick="loginClick"
                    android:soundEffectsEnabled="true"
                    android:text="@string/txt_login"
                    android:textColor="@android:color/white"
                    android:textIsSelectable="false" />


                <LinearLayout
                    android:id="@+id/llDashedLine"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/dashed_line"
                    android:layerType="software"
                    android:orientation="horizontal"></LinearLayout>


                <Button
                    android:id="@+id/btnSignUpNow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/btn_margin"
                    android:layout_marginRight="@dimen/btn_margin"
                    android:background="@drawable/btn_with_border"
                    android:fontFamily="@font/extrabold"
                    android:gravity="center"
                    android:onClick="signUpClick"
                    android:inputType="textPersonName"
                    android:longClickable="false"
                    android:soundEffectsEnabled="true"
                    android:text="@string/txt_sign_up"
                    android:textColor="@drawable/white_btn_color_switcher"
                    android:textIsSelectable="false" />

            </LinearLayout>


        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>


</layout>
